Update social links and header

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,3 +1,4 @@
+<script src="https://kit.fontawesome.com/e7645599a9.js" crossorigin="anonymous"></script>
 <div class="social">
 	<h4>
     {% if site.github %}
@@ -13,8 +14,8 @@
     {% if site.linkedin %}
 	  <a href="http://linkedin.com/in/{{ site.linkedin }}"><i class="fa fa-linkedin"></i></a>
     {% endif %}
-    {% if site.stackoverflow %}
-	  <a href="http://stackoverflow.com/{{ site.stackoverflow }}"><i class="fa fa-stack-overflow"></i></a>
+    {% if site.itchio %}
+	  <a href="https://{{ site.itchio }}.itch.io"><i class="fab fa-itch-io"></i></a>
     {% endif %}
     {% if site.medium %}
       <a href="https://medium.com/@{{ site.medium }}"><i class="fa fa-medium"></i></a>
