Update project page. Update border colors in header

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,28 +1,26 @@
+<script src="https://kit.fontawesome.com/e7645599a9.js" crossorigin="anonymous"></script>
 <section id="projects">
 <div class="container">
   <h3>Projects</h3>
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 1</a></strong>
-			- Ei viderer tacimates pro, quem assum ea nam. Veritus omnesque eam te. Et natum mucius tamquam vel,
-			ea dolorem volumus deterruisset nec. Graeci mentitum sea an, eu prima elaboraret est.
+			<i class="fab fa-itch-io"></i>&nbsp;&nbsp;<strong><a href="https://one-person.itch.io/caduceus">Caduceus</a></strong>
+			- Two player snake game created in Godot for GitHub's Game-Off Game Jam.
 		</h5>
 		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 2</a></strong>
-			- An eripuit phaedrum qui, nec facer splendide ex, vel ea assum facilisi convenire.
-			Te his neglegentur consectetuer.
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/asalazar516/web-video-chat">Not Zoom</a></strong>
+			- Created a small web video chat in JS for Scopely 3 Day Game Jam. Used PeerJS and Socket.io and deployed to EJS
 		</h5>
     	<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 3</a></strong>
-			- An alii quot tantas eum, doming platonem persecuti mea et, vim perpetua cotidieque delicatissimi in.
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/asalazar516/alert-ios-propagation">Alert IOS App Propogation</a></strong>
+			- Python script to check when an IOS app has a new update by scraping the app's Apple store page.
 		</h5>
 		<h5>
-			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Project 4</a></strong>
-			- Vim an case vidit sententiae, est at euismod laboramus efficiantur. Ei sit brute lorem,
-			ea eam timeam viderer aliquid, cu integre omittam moderatius quo.
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/asalazar516/cypress_api_validation">Cypress API Validation Project</a></strong>
+			- Created in JS, using Cypress Automation framework to test Cats API Ninja on verifying cat's information
 		</h5>
-		<h5>
+		<!-- <h5>
 			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Project 5</a></strong>
 			- Dicta causae meliore ex vel, in vix erant integre petentium. Vix ei nisl scripta recusabo,
 			eam doming blandit facilisis.
@@ -36,10 +34,21 @@
 			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Project 7</a></strong>
 			- Essent putant indoctum sed in, reprimique persequeris neglegentur te quo. Nam rebum
 			tractatos partiendo at, debet ubique oporteat ut his.
-		</h5>
+		</h5> -->
 
 
     </div>
+  </div>
+  <h3>
+	Projects in progress
+  </h3>
+  <div class="=panel panel-default">
+	<div class="panel-body">
+		<h5>
+			<i class="fab fa-itch-io"></i>&nbsp;&nbsp;<strong><a href="https://one-person.itch.io/sp">Project MP</a></strong>
+			- Tennis-like Godot game. Working in 4.0. Plan to be play solo or locally competitive.
+		</h5>
+	</div>
   </div>
 </div>
 </section>
