--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
     </div>
     <div id="navbar">
       <ul class="nav navbar-nav navbar-right">
-        <!-- <li><a href="{{ site.baseurl }}about.html">ABOUT</a></li> -->
-        <li><a href="{{ site.baseurl }}projects.html">PROJECTS</a></li>
-        <li><a href="{{ site.baseurl }}static/res/Resume_Adrian_Salazar.pdf">RESUME</a></li>
+        <li><a href="about.html">ABOUT</a></li>
+        <li><a href="projects.html">PROJECTS</a></li>
+        <li><a href="static/res/Resume_Adrian_Salazar.pdf">RESUME</a></li>
       </ul>
     </div>
   </div>
