--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="navbar-header">
-      <a class="navbar-brand" href="{{ site.baseurl }}"><i class="fa fa-home"></i></a>
+      <a class="navbar-brand" href="/"><i class="fa fa-home"></i></a>
     </div>
     <div id="navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="projects.html">PROJECTS</a></li>
-        <li><a href="static/res/Resume_Adrian_Salazar.pdf">RESUME</a></li>
+        <!-- <li><a href="{{ site.baseurl }}about.html">ABOUT</a></li> -->
+        <li><a href="/projects.html">PROJECTS</a></li>
+        <li><a href="/static/res/Resume_Adrian_Salazar.pdf">RESUME</a></li>
       </ul>
     </div>
   </div>
